# vsomeip-fork

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  exportmap.gcc
.github/actions/bazel/: action.yml
.github/workflows/: bazel_build_validation.yml
.trunk/: trunk.yaml
documentation/: standalone-service-discovery.md
examples/sd_only_host/: BUILD.bazel  routing_stubs.cpp  sd_only_host.cpp  sd_only_host.json
implementation/configuration/include/: configuration.hpp  configuration_impl.hpp  internal.hpp  internal.hpp.in  service.hpp
implementation/configuration/src/: configuration_impl.cpp
implementation/e2e_protection/include/e2e/profile/: e2e_provider.hpp
implementation/endpoints/include/: abstract_netlink_factory.hpp  abstract_socket_factory.hpp  asio_netlink_factory.hpp  asio_socket_factory.hpp  endpoint.hpp  udp_server_endpoint_impl.hpp
implementation/endpoints/src/: asio_netlink_factory.cpp  asio_socket_factory.cpp
implementation/logger/src/: logger_impl.cpp  message.cpp
implementation/message/include/: deserializer.hpp
implementation/message/src/: deserializer.cpp  deserializer_message.cpp
implementation/routing/src/: routing_manager_impl.cpp
implementation/runtime/include/: application_factory.hpp  application_impl.hpp  runtime_impl.hpp
implementation/runtime/src/: application_impl.cpp  runtime_impl.cpp  runtime_impl_apps.cpp
implementation/security/include/: policy_manager_impl.hpp
implementation/security/src/: policy_manager_impl.cpp
implementation/service_discovery/include/: service_discovery_impl.hpp
implementation/service_discovery/src/: service_discovery_impl.cpp
interface/vsomeip/: application.hpp  application_ext.hpp  plugin.hpp
test/common/: BUILD.bazel
test/network_tests/fake_socket_tests/helpers/: base_fake_socket_fixture.cpp  base_fake_socket_fixture.hpp  fake_socket_factory.hpp
test/unit_tests/: BUILD.bazel  CMakeLists.txt
test/unit_tests/configuration_version_tests/: BUILD.bazel  CMakeLists.txt  ut_configuration_version.cpp
test/unit_tests/endpoint_tests/: BUILD.bazel  test_timer.cpp  test_timer.hpp
test/unit_tests/message_deserializer_tests/: BUILD.bazel  ut_deserialize.cpp
test/unit_tests/message_payload_impl_tests/: BUILD.bazel
test/unit_tests/message_serializer_tests/: BUILD.bazel  ut_serialize.cpp
test/unit_tests/netlink_tests/: BUILD.bazel
test/unit_tests/protocol_tests/: BUILD.bazel
test/unit_tests/routing_manager_tests/: BUILD.bazel
test/unit_tests/runtime_impl_tests/: BUILD.bazel  CMakeLists.txt  ut_application_factory.cpp
test/unit_tests/security_policy_manager_impl_tests/: BUILD.bazel
test/unit_tests/security_policy_tests/: BUILD.bazel
test/unit_tests/security_tests/: BUILD.bazel
test/unit_tests/usei_tests/: BUILD.bazel  ut_basic_tests.cpp
test/unit_tests/utility_utility_tests/: BUILD.bazel
