# Copyright (C) 2026 GM GLOBAL TECHNOLOGY OPERATIONS LLC ALL RIGHTS RESERVED.

load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "message_deserializer_tests",
    srcs = glob(["*.cpp"]),
    copts = ["-std=c++20"],
    deps = [
        "//:vsomeip-cfg",
        "//:vsomeip-lib",
        "//test/common:vsomeip_utilities",
        "//test/unit_tests:test_main",
        "@googletest//:gtest",
    ],
)
