# Copyright (C) 2026 GM GLOBAL TECHNOLOGY OPERATIONS LLC ALL RIGHTS RESERVED.

load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "message_payload_impl_tests",
    srcs = glob(["*.cpp"]),
    deps = [
        "//:vsomeip-cfg",
        "//:vsomeip-lib",
        "//test/common:vsomeip_utilities",
        "//test/unit_tests:test_main",
        "@googletest//:gtest",
    ],
)
