# Copyright (C) 2026 GM GLOBAL TECHNOLOGY OPERATIONS LLC ALL RIGHTS RESERVED.

load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "netlink_tests",
    srcs = glob(["*.cpp"]),
    copts = ["-std=c++20"],
    deps = [
        "//:vsomeip-lib",
        "//test/common:vsomeip_utilities",
        "//test/unit_tests:test_main",
        "@boost.asio",
        "@boost.system",
        "@googletest//:gtest",
    ],
)
