# Copyright (C) 2026 GM GLOBAL TECHNOLOGY OPERATIONS LLC ALL RIGHTS RESERVED.
#
# protocol_tests has its own main.cpp (not the shared one from ../main.cpp).

load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "protocol_tests",
    srcs = glob(["*.cpp"]),
    copts = ["-std=c++20"],
    deps = [
        "//:vsomeip-lib",
        "@googletest//:gtest",
    ],
)
