# Copyright (C) 2026 GM GLOBAL TECHNOLOGY OPERATIONS LLC ALL RIGHTS RESERVED.
#
# routing_manager_tests: has its own mock headers (mocks/*.hpp) and needs gmock.

load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "routing_manager_tests",
    srcs = glob(
        [
            "*.cpp",
            "*.hpp",
            "mocks/*.hpp",
        ],
    ),
    copts = ["-std=c++20"],
    deps = [
        "//:vsomeip-cfg",
        "//:vsomeip-lib",
        "//test/common:vsomeip_utilities",
        "//test/unit_tests:test_main",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
