# Copyright (C) 2026 GM GLOBAL TECHNOLOGY OPERATIONS LLC ALL RIGHTS RESERVED.

load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "security_tests",
    srcs = glob(["*.cpp"]),
    copts = ["-std=c++20"],
    # Tests load JSON policy data from test/common/examples_policies via
    # common::utility::get_policies_path(); make sure those files are
    # present in the runfiles tree.
    data = ["//test/common:examples_policies"],
    deps = [
        "//:vsomeip-cfg",
        "//:vsomeip-lib",
        "//test/common:vsomeip_utilities",
        "//test/unit_tests:test_main",
        "@googletest//:gtest",
    ],
)
